--- a/11styles.css
+++ b/11styles.css
@@ -244,6 +244,92 @@ body {
   cursor: pointer;
   }
   
+  .music-player {
+    display: flex;
+    position: fixed;
+    top: -3%;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    z-index: 9999;
+    padding: 20px;
+    flex-direction: column;
+    align-items : center;
+    justify-content:center;
+    text-align: center;
+    }
+    .player-container {
+      background: rgba(255, 255, 255, 0.8);
+      backdrop-filter: blur(10px);
+      padding: 1.5rem;
+      border-radius: 1rem;
+      width: 100vw;
+      height: 100vh;
+  
+    }
+    #banner-content {
+    max-width: 500px;
+    margin: 0 auto;
+    }
+    
+    #banner-cover {
+      width: 100%;
+      aspect-ratio: 1;
+      border-radius: 0.75rem;
+      overflow: hidden;
+      margin-bottom: 1.5rem;
+    }
+    #banner-cover-image{
+      width: 80%;
+      height: 80%;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+    
+    #banner-song-title{
+      font-size: 1.25rem;
+    color: #111827;
+    margin-bottom: 0.25rem;
+    margin-top: 1.5rem;
+    }
+    #banner-artist-name {
+      font-size: 0.875rem;
+      color: #4B5563;
+    }
+    
+    #banner-close {
+    font-size: 30px;
+    cursor: pointer;
+    }
+    
+    .main-controls {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 1.5rem;
+      margin-bottom: 1.5rem;
+    }
+    
+    /* Shuffle Popup */
+  .popup {
+    position: fixed;
+    bottom: 80px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-size: 14px;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+    pointer-events: none;
+  }
+  
+  .popup.active {
+    opacity: 1;
+  }
+  
   .main-controls {
     display: flex;
     justify-content: center;
