--- a/11styles.css
+++ b/11styles.css
@@ -149,6 +149,22 @@
     height: 100vh;
 
   }
+  #banner-play-pause {
+    position: relative;
+    font-size: 1.5rem;
+    border: none;
+    background: transparent;
+    color: white;
+    cursor: pointer;
+}
+
+#banner-loading-icon {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
   #banner-content {
   max-width: 500px;
   margin: 0 auto;
