--- a/11styles.css
+++ b/11styles.css
@@ -148,21 +148,9 @@
     width: 100vw;
     height: 100vh;
 
-  }
-  #banner-play-pause {
-    position: relative;
-    font-size: 1.5rem;
-    border: none;
-    background: transparent;
-    color: white;
-    cursor: pointer;
-}
-
-#banner-loading-icon {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+  }#banner-play-pause:disabled {
+    opacity: 0.6;
+    pointer-events: none;
 }
 
   #banner-content {
